--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
+    "axios": "^1.6.8",
     "framer-motion": "^11.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
