--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "axios": "^1.6.8",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^11.1.3",
     "react": "^18.2.0",
     "react-auth-kit": "^3.1.3",
