--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "crypto-js": "^4.2.0",
     "framer-motion": "^11.1.3",
+    "multer": "^1.4.5-lts.1",
     "node-forge": "^1.3.1",
     "react": "^18.2.0",
     "react-auth-kit": "^3.1.3",
